--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_API= http://localhost:3001
-REACT_APP_DARK_SKY = http://api.darksky.net/forecast/89d15b087b4a2998b07b5e424f151ecc
+REACT_APP_API= http://localhost:3002
+REACT_APP_DARK_SKY = https://api.darksky.net/forecast/89d15b087b4a2998b07b5e424f151ecc
 
