--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^3.7.0",
     "react-map-gl": "^5.0.10",
     "react-modal": "^3.9.1",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0"
